testsuite/tests/lexical_envs/invalid_subunit_root/multiple_lists.lkt
grammar foo_grammar {
    @main_rule main_rule <- list+ListOfExample(Example("example"))
}
